# python_async_fastapi_inflearn_study_project

./: 01-3-io-bound.py  01-cpu-boud.py  02-1-sync.py  02-2-async.py  03-03-io-multi-threading.py  04-1- basic-fetcher copy.py  04-1-1- basic-fetcher.py  04-1-2- basic-fetcher.py  hello.py  memo.md  requirements.txt
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: __init__.py
test/: index.html  script.js
