[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["nakyeonko3 <badaclock@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
